--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="./images/c1.jpg" alt="">
             </div>
             <div class="text">
-                <h3>Special salade</h3>
+                <h3>Special vapeur</h3>
             </div>
         </div>
         <div class="box">
@@ -66,7 +66,7 @@
                 <img src="./images/c2.jpg" alt="">
             </div>
             <div class="text">
-                <h3>Special salade</h3>
+                <h3>Special sushi</h3>
             </div>
         </div>
         <div class="box">
@@ -74,7 +74,7 @@
                 <img src="./images/c3.jpg" alt="">
             </div>
             <div class="text">
-                <h3>Special salade</h3>
+                <h3>Special pizza</h3>
             </div>
         </div>
         <div class="box">
@@ -98,7 +98,7 @@
                 <img src="./images/c6.jpg" alt="">
             </div>
             <div class="text">
-                <h3>Special salade</h3>
+                <h3>Snack</h3>
             </div>
         </div>
         <div class="box">
@@ -106,7 +106,7 @@
                 <img src="./images/c7.jpg" alt="">
             </div>
             <div class="text">
-                <h3>Special salade</h3>
+                <h3>Les viandes</h3>
             </div>
         </div>
         <div class="box">
@@ -114,7 +114,7 @@
                 <img src="./images/c8.jpg" alt="">
             </div>
             <div class="text">
-                <h3>Special salade</h3>
+                <h3>Snack</h3>
             </div>
         </div>
     </div>
